--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 /node_modules
 /vendor
 /dist
+/public
 yarn.lock
 npm-debug.log
 yarn-error.log
-.editorconfig
+.env
+.budfiles
+npm-debug.log
+yarn-error.log
 .github
 .idea
+
