--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,8 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
+    "string-quotes": null,
+    "selector-class-pattern": null,
     "declaration-colon-newline-after": null,
     "value-list-comma-newline-after": null,
     "no-empty-source": null,
@@ -29,7 +31,10 @@
           "responsive",
           "variants",
           "screen",
-          "function"
+          "function",
+          "use",
+          "forward",
+          "layer"
         ]
       }
     ]
