--- a/package.json
+++ b/package.json
@@ -3,58 +3,40 @@
   "browserslist": [
     "extends @wordpress/browserslist-config"
   ],
+  "bud": {
+    "location": {
+      "src": "resources",
+      "dist": "public"
+    }
+  },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=development run-s mix",
-    "build:production": "cross-env NODE_ENV=production run-s clean mix",
-    "start": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
-    "hot": "cross-env NODE_ENV=development run-s build mix:hot",
-    "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "mix:hot": "webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "clean": "run-p clean:*",
-    "clean:dist": "rimraf dist",
-    "clean:cache": "rimraf storage/framework/cache/*.php storage/framework/cache/data/*.php",
-    "clean:views": "rimraf storage/framework/views/*.php",
-    "lint": "run-s -c lint:*",
-    "lint:scripts": "eslint resources/assets/scripts",
-    "lint:styles": "stylelint \"resources/assets/**/*.{vue,css,sass,scss,less}\"",
-    "test": "run-s -c lint",
-    "translate": "run-s -c translate:*",
-    "translate:pot": "wp i18n make-pot . ./resources/languages/sage.pot --ignore-domain --include=\"app,resources/assets,resources/views\"",
-    "translate:js": "wp i18n make-json ./resources/languages --no-purge --pretty-print"
+    "dev": "bud dev",
+    "build": "bud build",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint resources/scripts",
+    "lint:css": "stylelint \"resources/**/*.{css,scss,vue}\"",
+    "test": "npm run lint"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "@tinypixelco/laravel-mix-wp-blocks": "^1.1.0",
-    "@wordpress/babel-preset-default": "^4.17.0",
-    "@wordpress/browserslist-config": "^2.7.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^2.8.0",
-    "autoprefixer": "^9",
-    "babel-eslint": "^10.1.0",
-    "browser-sync": "^2.26.12",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.7.0",
-    "eslint-plugin-import": "^2.22.0",
-    "laravel-mix": "^5.0.4",
-    "laravel-mix-copy-watched": "^2.2.4",
-    "laravel-mix-purgecss": "^5.0.0",
-    "npm-run-all": "^4.1",
-    "postcss": "^7",
-    "purgecss-with-wordpress": "^2.3.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "stylelint": "^13.6.1",
-    "stylelint-config-standard": "^20.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue-template-compiler": "^2.6.11"
+    "@roots/bud": "5.0.0-next.18",
+    "@roots/sage": "5.0.0-next.18",
+    "@wordpress/browserslist-config": "4.1.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "7.32.0",
+    "postcss": "8.4.5",
+    "postcss-import": "14.0.2",
+    "postcss-nested": "5.0.6",
+    "postcss-preset-env": "7.0.1",
+    "prettier": "2.5.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.2"
   },
   "dependencies": {
     "@fontsource/pacifico": "^4.1.0",
-    "alpinejs": "^2.8.2",
     "@fortawesome/fontawesome-free": "^5.15.3"
   }
 }
