--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "prettier": "2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.2"
+    "tailwindcss": "^3.0.5"
   },
   "dependencies": {
     "@fontsource/pacifico": "^4.1.0",
-    "@fortawesome/fontawesome-free": "^5.15.3"
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@wordpress/blocks": "^11.1.4"
   }
 }
