--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@fontsource/pacifico": "^4.1.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@tailwindcss/typography": "^0.5.0",
     "@wordpress/blocks": "^11.1.4"
   }
 }
